--- a/app/src/main/res/layout/activity_landing_screen.xml
+++ b/app/src/main/res/layout/activity_landing_screen.xml
@@ -30,6 +30,7 @@
         app:layout_constraintVertical_bias="0.309" />
 
     <Button
+        android:id="@+id/login"
         android:layout_width="344dp"
         android:layout_height="55dp"
         android:layout_gravity="bottom"
@@ -49,6 +50,7 @@
         app:layout_constraintVertical_bias="0.59" />
 
     <Button
+        android:id="@+id/register"
         android:layout_width="344dp"
         android:layout_height="55dp"
         android:layout_gravity="bottom"
