--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -70,7 +70,7 @@
         app:layout_constraintVertical_bias="0.585" />
 
     <Button
-        android:id="@+id/btnAbsen"
+        android:id="@+id/btnLanjut"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="344dp"
         android:layout_height="55dp"
