--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,4 +108,24 @@
 
     </androidx.cardview.widget.CardView>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Jam Kerja"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/poppinsmedium"
+        android:layout_marginTop="280dp"
+        android:layout_marginLeft="170dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="08.00 WIB - 17.00 WIB"
+        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/poppinsbold"
+        android:layout_marginTop="300dp"
+        android:layout_marginLeft="60dp"/>
+
 </RelativeLayout>
